--- a/app/src/main/res/layout/place_list_view.xml
+++ b/app/src/main/res/layout/place_list_view.xml
@@ -45,6 +45,12 @@
             android:textStyle="bold"
             android:textAppearance="?android:textAppearanceSmall"
             />
+
+        <TextView android:id="@+id/list_id"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:text="hidden"
+            android:visibility="gone"/>
     </LinearLayout>
 
 </LinearLayout>
